<resources>
    <string name="app_name">GalleryDemo</string>
    <string name="search">Search</string>
    <string name="loading">Loading...</string>
    <string name="settings_title">Setting</string>
    <string name="gallery_title">GalleryDemo</string>
    <string name="section_label">Section</string>
    <string name="sort_label">Sort</string>
    <string name="window_label">Window</string>
    <string name="viral_label">Viral</string>
    <string name="filter_btn">Filter</string>
    <string name="no_results">No results</string>
</resources>
